# go-mod-work

./: BUILD.bazel  README.md  WORKSPACE  WORKSPACE.origin  deps.bzl  go.mod  go.sum  go.work  go.work.sum
booking/: endpoint.go  instrumenting.go  logging.go  service.go  transport.go
cargo/: cargo.go  delivery.go  handling.go  itinerary.go
cmd/: mappers.go
cmd/generics_repos/: repos.go
cmd/generics_repos/cli/: main.go
cmd/shippingsvc/: main.go
data/: go.mod
data/booking/: BUILD.bazel  endpoint.go  instrumenting.go  logging.go  transport.go
data/handling/: BUILD.bazel  endpoint.go  instrumenting.go  logging.go  transport.go
data/inmem/: BUILD.bazel  inmem.go
data/routing/: BUILD.bazel  proxying.go
data/tracking/: BUILD.bazel  endpoint.go  instrumenting.go  logging.go  transport.go
domain/: BUILD.bazel  go.mod  repos.go
domain/booking/: BUILD.bazel  service.go
domain/cargo/: BUILD.bazel  cargo.go  delivery.go  handling.go  itinerary.go
domain/handling/: BUILD.bazel  service.go
domain/inspection/: BUILD.bazel  inspection.go
domain/location/: BUILD.bazel
domain/routing/: BUILD.bazel  service.go
domain/tracking/: BUILD.bazel  service.go
domain/voyage/: BUILD.bazel  sample_voyages.go  voyage.go
handling/: endpoint.go  instrumenting.go  logging.go  service.go  transport.go
inmem/: inmem.go
inspection/: inspection.go
internal/: repos.go
internal/booking/: endpoint.go  instrumenting.go  logging.go  service.go  transport.go
internal/cargo/: cargo.go  delivery.go  handling.go  itinerary.go
internal/handling/: endpoint.go  instrumenting.go  logging.go  service.go  transport.go
internal/inmem/: inmem.go
internal/inspection/: inspection.go
internal/routing/: proxying.go  service.go
internal/tracking/: service.go  transport.go
internal/voyage/: sample_voyages.go  voyage.go
pkg/: verision.go
routing/: proxying.go  service.go
svc/: go.mod
svc/cmd/shippingsvc/: BUILD.bazel  main.go
tracking/: service.go  transport.go
voyage/: sample_voyages.go  voyage.go
