load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "domain",
    srcs = ["repos.go"],
    importpath = "github.com/VolodymyrPobochii/go-mod-work/domain",
    visibility = ["//visibility:public"],
    deps = ["@com_github_pkg_errors//:errors"],
)

alias(
    name = "go_default_library",
    actual = ":domain",
    visibility = ["//visibility:public"],
)
