load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "routing",
    srcs = ["proxying.go"],
    importpath = "github.com/VolodymyrPobochii/go-mod-work/data/routing",
    visibility = ["//visibility:public"],
    deps = [
        "//domain/cargo",
        "//domain/location",
        "//domain/routing",
        "//domain/voyage",
        "@com_github_go_kit_kit//circuitbreaker",
        "@com_github_go_kit_kit//endpoint",
        "@com_github_go_kit_kit//transport/http",
    ],
)

alias(
    name = "go_default_library",
    actual = ":routing",
    visibility = ["//visibility:public"],
)
