load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "tracking",
    srcs = [
        "endpoint.go",
        "instrumenting.go",
        "logging.go",
        "transport.go",
    ],
    importpath = "github.com/VolodymyrPobochii/go-mod-work/data/tracking",
    visibility = ["//visibility:public"],
    deps = [
        "//domain/cargo",
        "//domain/tracking",
        "@com_github_go_kit_kit//endpoint",
        "@com_github_go_kit_kit//log",
        "@com_github_go_kit_kit//metrics",
        "@com_github_go_kit_kit//transport",
        "@com_github_go_kit_kit//transport/http",
        "@com_github_gorilla_mux//:mux",
    ],
)

alias(
    name = "go_default_library",
    actual = ":tracking",
    visibility = ["//visibility:public"],
)
