load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "inspection",
    srcs = ["inspection.go"],
    importpath = "github.com/VolodymyrPobochii/go-mod-work/domain/inspection",
    visibility = ["//visibility:public"],
    deps = ["//domain/cargo"],
)

alias(
    name = "go_default_library",
    actual = ":inspection",
    visibility = ["//visibility:public"],
)
