load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "location",
    srcs = [
        "location.go",
        "sample_locations.go",
    ],
    importpath = "github.com/VolodymyrPobochii/go-mod-work/domain/location",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":location",
    visibility = ["//visibility:public"],
)
