load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "tracking",
    srcs = ["service.go"],
    importpath = "github.com/VolodymyrPobochii/go-mod-work/domain/tracking",
    visibility = ["//visibility:public"],
    deps = ["//domain/cargo"],
)

alias(
    name = "go_default_library",
    actual = ":tracking",
    visibility = ["//visibility:public"],
)
