load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "voyage",
    srcs = [
        "sample_voyages.go",
        "voyage.go",
    ],
    importpath = "github.com/VolodymyrPobochii/go-mod-work/domain/voyage",
    visibility = ["//visibility:public"],
    deps = ["//domain/location"],
)

alias(
    name = "go_default_library",
    actual = ":voyage",
    visibility = ["//visibility:public"],
)
