load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "shippingsvc_lib",
    srcs = ["main.go"],
    importpath = "github.com/VolodymyrPobochii/go-mod-work/svc/cmd/shippingsvc",
    visibility = ["//visibility:private"],
    deps = [
        "//data/booking",
        "//data/handling",
        "//data/inmem",
        "//data/routing",
        "//data/tracking",
        "//domain/booking",
        "//domain/cargo",
        "//domain/handling",
        "//domain/inspection",
        "//domain/location",
        "//domain/routing",
        "//domain/tracking",
        "@com_github_go_kit_kit//log",
        "@com_github_go_kit_kit//log/zap",
        "@com_github_go_kit_kit//metrics/prometheus",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap//zapcore",
    ],
)

go_binary(
    name = "shippingsvc",
    embed = [":shippingsvc_lib"],
    visibility = ["//visibility:public"],
)
